Feature: Added Obstacle controller.

--- a/Dino.vm
+++ b/Dino.vm
@@ -30,6 +30,61 @@ call Memory.deAlloc 1
 pop temp 0
 push constant 0
 return
+function Dino.run 1
+push argument 0
+pop pointer 0
+push this 2
+pop local 0
+push this 2
+push constant 0
+gt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 4
+push this 5
+add
+pop this 4
+label IF_FALSE0
+push this 4
+push constant 0
+eq
+not
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push this 2
+push this 4
+add
+pop local 0
+push local 0
+push constant 0
+lt
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push constant 0
+pop local 0
+label IF_FALSE2
+label IF_FALSE1
+push this 2
+push local 0
+eq
+not
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push pointer 0
+call Dino.erase 1
+pop temp 0
+push local 0
+pop this 2
+push pointer 0
+call Dino.draw 1
+pop temp 0
+label IF_FALSE3
+push constant 0
+return
 function Dino.draw 1
 push argument 0
 pop pointer 0
@@ -39,9 +94,6 @@ sub
 push this 2
 sub
 pop local 0
-push pointer 0
-call Dino.calculatePos 1
-pop temp 0
 push constant 32
 push local 0
 call Math.multiply 2
@@ -56,45 +108,6 @@ return
 function Dino.erase 3
 push argument 0
 pop pointer 0
-push this 4
-push constant 0
-gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push this 6
-push constant 2
-sub
-pop local 2
-goto IF_END0
-label IF_FALSE0
-push this 6
-push this 0
-add
-pop local 2
-label IF_END0
-push constant 0
-not
-call Screen.setColor 1
-pop temp 0
-push local 2
-push constant 255
-push this 2
-sub
-push this 1
-sub
-push constant 2
-sub
-push local 2
-push constant 2
-add
-push constant 255
-push this 2
-sub
-push this 1
-sub
-call Screen.drawRectangle 4
-pop temp 0
 push constant 255
 push this 2
 sub
@@ -121,57 +134,19 @@ return
 function Dino.jump 0
 push argument 0
 pop pointer 0
-push argument 1
-pop this 4
-push constant 0
-return
-function Dino.calculatePos 1
-push argument 0
-pop pointer 0
 push this 2
-pop local 0
-push this 4
-push this 5
-add
-pop this 4
-push local 0
-push this 4
-add
 push constant 0
-gt
+eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-push local 0
-push this 4
-add
-pop local 0
-goto IF_END0
+push argument 1
+pop this 4
 label IF_FALSE0
 push constant 0
-pop local 0
-push constant 0
-pop this 4
-label IF_END0
-push this 2
-push local 0
-eq
-not
-push this 2
-push constant 0
-gt
-or
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
-push pointer 0
-call Dino.erase 1
-pop temp 0
-label IF_FALSE1
-push constant 4
-call Sys.wait 1
-pop temp 0
-push local 0
-pop this 2
-push constant 0
+return
+function Dino.getSpeed 0
+push argument 0
+pop pointer 0
+push this 3
 return
