--- a/Obstacle.vm
+++ b/Obstacle.vm
@@ -1,24 +1,62 @@
 function Obstacle.new 0
-push constant 4
+push constant 6
 call Memory.alloc 1
 pop pointer 0
+push constant 511
 push argument 0
+sub
+pop this 3
+push argument 0
+pop this 4
+push argument 1
+pop this 5
+push pointer 0
+return
+function Obstacle.dispose 0
+push argument 0
+pop pointer 0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
+return
+function Obstacle.setPrev 0
+push argument 0
+pop pointer 0
+push argument 1
 pop this 0
+push constant 0
+return
+function Obstacle.setNext 0
+push argument 0
+pop pointer 0
 push argument 1
 pop this 1
-push argument 2
-pop this 2
-push argument 3
-pop this 3
-push pointer 0
+push constant 0
+return
+function Obstacle.getPrev 0
+push argument 0
+pop pointer 0
+push this 0
+return
+function Obstacle.getNext 0
+push argument 0
+pop pointer 0
+push this 1
 return
 function Obstacle.move 0
 push argument 0
 pop pointer 0
-push this 0
+push pointer 0
+call Obstacle.erase 1
+pop temp 0
 push this 3
+push argument 1
 sub
-pop this 0
+pop this 3
+push pointer 0
+call Obstacle.draw 1
+pop temp 0
 push constant 0
 return
 function Obstacle.draw 0
@@ -28,14 +66,32 @@ push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push this 0
-push this 1
-push this 0
-push this 2
+push this 3
+push constant 255
+push this 5
+sub
+push this 3
+push this 4
 add
-push this 1
-push this 2
+push constant 255
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
+function Obstacle.erase 0
+push argument 0
+pop pointer 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push this 3
+push constant 255
+push this 5
+sub
+push this 3
+push this 4
 add
+push constant 255
 call Screen.drawRectangle 4
 pop temp 0
 push constant 0
