--- a/DinoGame.vm
+++ b/DinoGame.vm
@@ -1,5 +1,5 @@
 function DinoGame.new 0
-push constant 3
+push constant 4
 call Memory.alloc 1
 pop pointer 0
 push constant 1
@@ -10,6 +10,8 @@ call ObstacleController.new 1
 pop this 1
 push constant 0
 pop this 2
+push constant 0
+pop this 3
 push pointer 0
 return
 function DinoGame.incCounter 0
@@ -32,37 +34,69 @@ pop this 2
 label IF_END0
 push constant 0
 return
-function DinoGame.play 2
+function DinoGame.getCounter 0
+push argument 0
+pop pointer 0
+push this 2
+return
+function DinoGame.stop 0
+push argument 0
+pop pointer 0
+push constant 0
+not
+pop this 3
+push constant 0
+return
+function DinoGame.getDino 0
+push argument 0
+pop pointer 0
+push this 0
+return
+function DinoGame.play 1
 push argument 0
 pop pointer 0
 label WHILE_EXP0
-push constant 0
+push this 3
 not
 not
 if-goto WHILE_END0
+push constant 3
+push this 2
+push constant 3
+call Math.divide 2
+call Math.multiply 2
+push this 2
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 0
 call Dino.run 1
 pop temp 0
+label IF_FALSE0
 push this 1
 push this 0
 call Dino.getSpeed 1
 call ObstacleController.move 2
 pop temp 0
 call Keyboard.keyPressed 0
-pop local 1
-push local 1
+pop local 0
+push local 0
 push constant 131
 eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push this 0
 push constant 15
 call Dino.jump 2
 pop temp 0
-label IF_FALSE0
+label IF_FALSE1
 push constant 5
 call Sys.wait 1
+pop temp 0
+push pointer 0
+call DinoGame.incCounter 1
 pop temp 0
 goto WHILE_EXP0
 label WHILE_END0
