--- a/Obstacle.vm
+++ b/Obstacle.vm
@@ -1,15 +1,17 @@
 function Obstacle.new 0
-push constant 6
+push constant 7
 call Memory.alloc 1
 pop pointer 0
+push argument 0
+pop this 0
 push constant 511
-push argument 0
+push argument 1
 sub
-pop this 3
-push argument 0
 pop this 4
 push argument 1
 pop this 5
+push argument 2
+pop this 6
 push pointer 0
 return
 function Obstacle.dispose 0
@@ -24,25 +26,25 @@ function Obstacle.setPrev 0
 push argument 0
 pop pointer 0
 push argument 1
-pop this 0
+pop this 1
 push constant 0
 return
 function Obstacle.setNext 0
 push argument 0
 pop pointer 0
 push argument 1
-pop this 1
+pop this 2
 push constant 0
 return
 function Obstacle.getPrev 0
 push argument 0
 pop pointer 0
-push this 0
+push this 1
 return
 function Obstacle.getNext 0
 push argument 0
 pop pointer 0
-push this 1
+push this 2
 return
 function Obstacle.move 0
 push argument 0
@@ -50,14 +52,25 @@ pop pointer 0
 push pointer 0
 call Obstacle.erase 1
 pop temp 0
-push this 3
+push this 4
 push argument 1
 sub
-pop this 3
+pop this 4
 push pointer 0
 call Obstacle.draw 1
 pop temp 0
+push pointer 0
+call Obstacle.checkGameOver 1
+pop temp 0
 push constant 0
+return
+function Obstacle.canMoveFurther 0
+push argument 0
+pop pointer 0
+push this 4
+push argument 1
+lt
+not
 return
 function Obstacle.draw 0
 push argument 0
@@ -66,12 +79,12 @@ push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push this 3
-push constant 255
-push this 5
-sub
-push this 3
 push this 4
+push constant 255
+push this 6
+sub
+push this 4
+push this 5
 add
 push constant 255
 call Screen.drawRectangle 4
@@ -84,15 +97,55 @@ pop pointer 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push this 3
-push constant 255
-push this 5
-sub
-push this 3
 push this 4
+push constant 255
+push this 6
+sub
+push this 4
+push this 5
 add
 push constant 255
 call Screen.drawRectangle 4
 pop temp 0
+push constant 0
+return
+function Obstacle.checkGameOver 4
+push argument 0
+pop pointer 0
+push this 0
+call ObstacleController.getDino 1
+pop local 0
+push local 0
+call Dino.getXPos 1
+push local 0
+call Dino.getXSize 1
+add
+push this 4
+gt
+pop local 1
+push this 4
+push this 5
+add
+push local 0
+call Dino.getXPos 1
+gt
+pop local 2
+push this 6
+push local 0
+call Dino.getYPos 1
+gt
+pop local 3
+push local 1
+push local 2
+and
+push local 3
+and
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 0
+call ObstacleController.stopGame 1
+pop temp 0
+label IF_FALSE0
 push constant 0
 return
