--- a/ObstacleController.vm
+++ b/ObstacleController.vm
@@ -4,13 +4,15 @@ call Memory.alloc 1
 pop pointer 0
 push argument 0
 pop this 0
+push pointer 0
 push constant 0
 push constant 0
-call Obstacle.new 2
+call Obstacle.new 3
 pop this 1
+push pointer 0
 push constant 0
 push constant 0
-call Obstacle.new 2
+call Obstacle.new 3
 pop this 2
 push this 1
 push this 2
@@ -23,6 +25,20 @@ pop temp 0
 push constant 100
 pop this 3
 push pointer 0
+return
+function ObstacleController.getDino 0
+push argument 0
+pop pointer 0
+push this 0
+call DinoGame.getDino 1
+return
+function ObstacleController.stopGame 0
+push argument 0
+pop pointer 0
+push this 0
+call DinoGame.stop 1
+pop temp 0
+push constant 0
 return
 function ObstacleController.move 1
 push argument 0
@@ -42,8 +58,21 @@ not
 if-goto WHILE_END0
 push local 0
 push argument 1
+call Obstacle.canMoveFurther 2
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push local 0
+push argument 1
 call Obstacle.move 2
 pop temp 0
+goto IF_END0
+label IF_FALSE0
+push pointer 0
+push local 0
+call ObstacleController.removeObstacle 2
+pop temp 0
+label IF_END0
 push local 0
 call Obstacle.getNext 1
 pop local 0
@@ -75,9 +104,10 @@ return
 function ObstacleController.addNewObstacle 2
 push argument 0
 pop pointer 0
+push pointer 0
 push constant 5
 push constant 20
-call Obstacle.new 2
+call Obstacle.new 3
 pop local 0
 push this 2
 call Obstacle.getPrev 1
@@ -97,6 +127,31 @@ pop temp 0
 push this 2
 push local 0
 call Obstacle.setPrev 2
+pop temp 0
+push constant 0
+return
+function ObstacleController.removeObstacle 2
+push argument 0
+pop pointer 0
+push argument 1
+call Obstacle.erase 1
+pop temp 0
+push argument 1
+call Obstacle.getPrev 1
+pop local 0
+push argument 1
+call Obstacle.getNext 1
+pop local 1
+push local 0
+push local 1
+call Obstacle.setNext 2
+pop temp 0
+push local 1
+push local 0
+call Obstacle.setPrev 2
+pop temp 0
+push argument 1
+call Obstacle.dispose 1
 pop temp 0
 push constant 0
 return
