--- a/Dino.vm
+++ b/Dino.vm
@@ -120,6 +120,15 @@ call Drawer.drawDino 1
 pop temp 0
 push constant 0
 return
+function Dino.incSpeed 0
+push argument 0
+pop pointer 0
+push this 3
+push constant 1
+add
+pop this 3
+push constant 0
+return
 function Dino.erase 3
 push argument 0
 pop pointer 0
