--- a/DinoGame.vm
+++ b/DinoGame.vm
@@ -1,5 +1,5 @@
 function DinoGame.new 0
-push constant 4
+push constant 5
 call Memory.alloc 1
 pop pointer 0
 push constant 1
@@ -12,6 +12,43 @@ push constant 0
 pop this 2
 push constant 0
 pop this 3
+push constant 0
+pop this 4
+push constant 1
+push constant 50
+call Output.moveCursor 2
+pop temp 0
+push constant 12
+call String.new 1
+push constant 89
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push constant 0
+call Output.printInt 1
+pop temp 0
 push pointer 0
 return
 function DinoGame.incCounter 0
@@ -25,6 +62,9 @@ goto IF_FALSE0
 label IF_TRUE0
 push constant 0
 pop this 2
+push this 1
+call ObstacleController.decInterval 1
+pop temp 0
 goto IF_END0
 label IF_FALSE0
 push this 2
@@ -47,6 +87,48 @@ not
 pop this 3
 push constant 0
 return
+function DinoGame.getScore 0
+push argument 0
+pop pointer 0
+push this 4
+return
+function DinoGame.printScore 0
+push argument 0
+pop pointer 0
+call Output.backSpace 0
+pop temp 0
+push this 4
+push constant 9
+gt
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+call Output.backSpace 0
+pop temp 0
+label IF_FALSE0
+push this 4
+push constant 99
+gt
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+call Output.backSpace 0
+pop temp 0
+label IF_FALSE1
+push this 4
+call Output.printInt 1
+pop temp 0
+push constant 0
+return
+function DinoGame.incScore 0
+push argument 0
+pop pointer 0
+push this 4
+push constant 1
+add
+pop this 4
+push constant 0
+return
 function DinoGame.getDino 0
 push argument 0
 pop pointer 0
@@ -60,6 +142,9 @@ push this 3
 not
 not
 if-goto WHILE_END0
+push pointer 0
+call DinoGame.printScore 1
+pop temp 0
 push constant 3
 push this 2
 push constant 3
@@ -88,7 +173,7 @@ if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
 push this 0
-push constant 15
+push constant 16
 call Dino.jump 2
 pop temp 0
 label IF_FALSE1
