--- a/Obstacle.vm
+++ b/Obstacle.vm
@@ -1,5 +1,5 @@
 function Obstacle.new 0
-push constant 7
+push constant 8
 call Memory.alloc 1
 pop pointer 0
 push argument 0
@@ -12,6 +12,8 @@ push argument 1
 pop this 5
 push argument 2
 pop this 6
+push constant 0
+pop this 7
 push pointer 0
 return
 function Obstacle.dispose 0
@@ -61,6 +63,9 @@ call Obstacle.draw 1
 pop temp 0
 push pointer 0
 call Obstacle.checkGameOver 1
+pop temp 0
+push pointer 0
+call Obstacle.checkScore 1
 pop temp 0
 push constant 0
 return
@@ -146,6 +151,33 @@ label IF_TRUE0
 push this 0
 call ObstacleController.stopGame 1
 pop temp 0
+label IF_FALSE0
+push constant 0
+return
+function Obstacle.checkScore 1
+push argument 0
+pop pointer 0
+push this 0
+call ObstacleController.getDino 1
+pop local 0
+push local 0
+call Dino.getXPos 1
+push this 4
+push this 5
+add
+gt
+push this 7
+not
+and
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 0
+call ObstacleController.incScore 1
+pop temp 0
+push constant 0
+not
+pop this 7
 label IF_FALSE0
 push constant 0
 return
