--- a/DinoGame.vm
+++ b/DinoGame.vm
@@ -1,19 +1,23 @@
 function DinoGame.new 0
-push constant 5
+push constant 6
 call Memory.alloc 1
 pop pointer 0
 push constant 1
 call Dino.new 1
 pop this 0
-push pointer 0
-call ObstacleController.new 1
-pop this 1
-push constant 0
+push constant 53
+call Randomizer.new 1
 pop this 2
+push pointer 0
+push this 2
+call ObstacleController.new 2
+pop this 1
 push constant 0
 pop this 3
 push constant 0
 pop this 4
+push constant 0
+pop this 5
 push constant 1
 push constant 50
 call Output.moveCursor 2
@@ -54,50 +58,50 @@ return
 function DinoGame.incCounter 0
 push argument 0
 pop pointer 0
-push this 2
+push this 3
 push constant 100
 eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
 push constant 0
-pop this 2
+pop this 3
 push this 1
 call ObstacleController.decInterval 1
 pop temp 0
 goto IF_END0
 label IF_FALSE0
-push this 2
+push this 3
 push constant 1
 add
-pop this 2
+pop this 3
 label IF_END0
 push constant 0
 return
 function DinoGame.getCounter 0
 push argument 0
 pop pointer 0
-push this 2
+push this 3
 return
 function DinoGame.stop 0
 push argument 0
 pop pointer 0
 push constant 0
 not
-pop this 3
+pop this 4
 push constant 0
 return
 function DinoGame.getScore 0
 push argument 0
 pop pointer 0
-push this 4
+push this 5
 return
 function DinoGame.printScore 0
 push argument 0
 pop pointer 0
 call Output.backSpace 0
 pop temp 0
-push this 4
+push this 5
 push constant 9
 gt
 if-goto IF_TRUE0
@@ -106,7 +110,7 @@ label IF_TRUE0
 call Output.backSpace 0
 pop temp 0
 label IF_FALSE0
-push this 4
+push this 5
 push constant 99
 gt
 if-goto IF_TRUE1
@@ -115,7 +119,7 @@ label IF_TRUE1
 call Output.backSpace 0
 pop temp 0
 label IF_FALSE1
-push this 4
+push this 5
 call Output.printInt 1
 pop temp 0
 push constant 0
@@ -123,10 +127,10 @@ return
 function DinoGame.incScore 0
 push argument 0
 pop pointer 0
-push this 4
+push this 5
 push constant 1
 add
-pop this 4
+pop this 5
 push constant 0
 return
 function DinoGame.getDino 0
@@ -138,19 +142,19 @@ function DinoGame.play 1
 push argument 0
 pop pointer 0
 label WHILE_EXP0
-push this 3
+push this 4
 not
 not
 if-goto WHILE_END0
 push pointer 0
 call DinoGame.printScore 1
 pop temp 0
-push constant 3
-push this 2
-push constant 3
+push constant 4
+push this 3
+push constant 4
 call Math.divide 2
 call Math.multiply 2
-push this 2
+push this 3
 eq
 if-goto IF_TRUE0
 goto IF_FALSE0
@@ -175,6 +179,10 @@ label IF_TRUE1
 push this 0
 push constant 16
 call Dino.jump 2
+pop temp 0
+push this 2
+push this 3
+call Randomizer.setSeed 2
 pop temp 0
 label IF_FALSE1
 push constant 5
