--- a/Randomizer.vm
+++ b/Randomizer.vm
@@ -6,6 +6,13 @@ push argument 0
 pop this 0
 push pointer 0
 return
+function Randomizer.setSeed 0
+push argument 0
+pop pointer 0
+push argument 1
+pop this 0
+push constant 0
+return
 function Randomizer.randInt 4
 push argument 0
 pop pointer 0
