--- a/DinoGame.vm
+++ b/DinoGame.vm
@@ -19,22 +19,12 @@ pop this 4
 push constant 0
 pop this 5
 push constant 1
-push constant 50
+push constant 54
 call Output.moveCursor 2
 pop temp 0
-push constant 12
+push constant 7
 call String.new 1
-push constant 89
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 115
+push constant 83
 call String.appendChar 2
 push constant 99
 call String.appendChar 2
@@ -193,6 +183,9 @@ call DinoGame.incCounter 1
 pop temp 0
 goto WHILE_EXP0
 label WHILE_END0
+push this 5
+call Drawer.printFinalScore 1
+pop temp 0
 push constant 0
 return
 function DinoGame.dispose 0
