--- a/Drawer.vm
+++ b/Drawer.vm
@@ -564,3 +564,99 @@ call Memory.poke 2
 pop temp 0
 push constant 0
 return
+function Drawer.drawBox 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push argument 0
+push argument 4
+sub
+push argument 1
+push argument 4
+sub
+push argument 2
+push argument 4
+add
+push argument 3
+push argument 4
+add
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push argument 0
+push argument 1
+push argument 2
+push argument 3
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push argument 0
+push argument 4
+add
+push argument 1
+push argument 4
+add
+push argument 2
+push argument 4
+sub
+push argument 3
+push argument 4
+sub
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
+function Drawer.printFinalScore 0
+push constant 150
+push constant 75
+push constant 361
+push constant 180
+push constant 3
+call Drawer.drawBox 5
+pop temp 0
+push constant 11
+push constant 24
+call Output.moveCursor 2
+pop temp 0
+push constant 14
+call String.new 1
+push constant 89
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push argument 0
+call Output.printInt 1
+pop temp 0
+push constant 0
+return
