--- a/DinoGame.vm
+++ b/DinoGame.vm
@@ -163,6 +163,10 @@ pop local 0
 push local 0
 push constant 131
 eq
+push local 0
+push constant 32
+eq
+or
 if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
